# checked-rs

./: Cargo.toml  README.md  makefile
macro_impl/: Cargo.toml  README.md
macro_impl/src/: clamped.rs  common_impl.rs  enum_impl.rs  hard_impl.rs  item.rs  lib.rs  ops.rs  params.rs  range_seq.rs  soft_impl.rs  variants.rs
macro_impl/src/clamped/: common_impl.rs  enum_impl.rs  hard_repr.rs  soft_repr.rs
macro_impl/src/item/: enum_item.rs  struct_item.rs
macro_impl/src/item/enum_item/: field.rs  variant.rs
macro_impl/src/item/struct_item/: field.rs
macro_impl/src/params/: as_soft_or_hard.rs  attr_params.rs  behavior_arg.rs  derived_traits.rs  enum_variants.rs  lower_or_min.rs  min_or_max.rs  number_arg.rs  number_arg_range.rs  number_kind.rs  number_value.rs  number_value_range.rs  panic_or_panicking.rs  saturate_or_saturating.rs  semi_or_colon.rs  struct_item.rs  upper_or_max.rs
macro_impl/src/params/snapshots/: checked_rs_macro_impl__params__as_soft_or_hard__tests__to_tokens_hard.snap.new  checked_rs_macro_impl__params__as_soft_or_hard__tests__to_tokens_soft.snap.new
macros/: Cargo.toml  README.md
macros/derive/: Cargo.toml
macros/derive/src/: lib.rs
macros/derive_impl/: Cargo.toml
macros/derive_impl/src/: clamped.rs  ops.rs  params.rs  variants.rs
macros/src/: lib.rs
src/: clamp.rs  guard.rs  lib.rs  view.rs
src/clamp/: guard.rs  hard.rs  soft.rs
