[package]
  description = "A library providing clamped unsigned integer symantic types and a general-purpose type that encodes a value and it's validator into a single type."
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  name        = "checked-rs"
  repository  = "https://github.com/HoodieCollin/checked-rs"
  version     = "0.1.0"

[workspace]
  members = ["macro_impl", "macros"]

  [workspace.dependencies.quote]
    version = "1.0"

  [workspace.dependencies.syn]
    features = ["derive", "full", "visit-mut"]
    version  = "2.0"

  [workspace.dependencies.proc-macro2]
    version = "1.0"

  [workspace.dependencies.proc-macro-error]
    version = "1.0"


[dependencies.anyhow]
  version = "1.0"

[dependencies.checked-rs-macros]
  path = "macros"

[dependencies.paste]
  version = "1.0"

[dependencies.serde]
  features = ["derive"]
  version  = "1.0"

[dependencies.thiserror]
  version = "1.0"

[dependencies.rand]
  version = "0.8"
