[package]
  description = "A library for encoding validation semantics into the type system."
  edition     = "2021"
  name        = "checked-rs"
  version     = "0.7.2"
  # 
  authors.workspace    = true
  exclude              = ["makefile"]
  keywords             = ["checked", "clamp", "enum", "validation"]
  license.workspace    = true
  repository.workspace = true

[workspace]
  members = ["macro_impl", "macros"]

  [workspace.package]
    authors    = ["HoodieCollin <collinkokotas@gmail.com>"]
    license    = "MIT OR Apache-2.0"
    repository = "https://github.com/HoodieCollin/checked-rs"

  [workspace.dependencies.quote]
    version = "1.0"

  [workspace.dependencies.syn]
    features = ["derive", "full", "visit-mut"]
    version  = "2.0"

  [workspace.dependencies.proc-macro2]
    version = "1.0"

  [workspace.dependencies.num-format]
    version = "0.4"

  [workspace.dependencies.rhai]
    features = ["internals"]
    version  = "1"

  [workspace.dependencies.paste]
    version = "1"

  [workspace.dependencies.anyhow]
    version = "1.0"

  [workspace.dependencies.rangemap]
    version = "1.5"

[dependencies.anyhow]
  workspace = true

[dependencies.rangemap]
  workspace = true

[dependencies.checked-rs-macros]
  path    = "macros"
  version = "0"

[dependencies.paste]
  version = "1.0"

[dependencies.serde]
  features = ["derive"]
  version  = "1.0"

[dependencies.thiserror]
  version = "1.0"

[dependencies.rand]
  version = "0.8"
