[package]
  description = "Implementation of the procedural macros for checked-rs. This crate is not intended to be used directly."
  edition     = "2021"
  name        = "checked-rs-macro-impl"
  version     = "0.7.2"
  # 
  authors.workspace    = true
  license.workspace    = true
  repository.workspace = true

[dependencies]
  convert_case = "0.6.0"

  [dependencies.anyhow]
    workspace = true

  [dependencies.quote]
    workspace = true

  [dependencies.syn]
    workspace = true

  [dependencies.proc-macro2]
    workspace = true

  [dependencies.num-format]
    workspace = true

  [dependencies.rhai]
    workspace = true

  [dependencies.paste]
    workspace = true

  [dependencies.rangemap]
    workspace = true

[dev-dependencies]
  prettyplease = "0.2"
