[package]
  description = "Procedural macros for checked-rs. This crate is not intended to be used directly."
  edition     = "2021"
  name        = "checked-rs-macros"
  version     = "0.5.0"
  # 
  authors.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lib]
  proc-macro = true

[dependencies.quote]
  version = "1.0"

[dependencies.syn]
  features = ["derive", "full"]
  version  = "2.0"

[dependencies.proc-macro2]
  version = "1.0"

[dependencies.proc-macro-error]
  version = "1.0"

[dependencies.checked-rs-macro-impl]
  path    = "../macro_impl"
  version = "0"
